[package]
name = "rollout"
description = "A rolling logfile appender that takes data from stdin"
authors = [ "Richard Matheson" ]
license = "MIT"
keywords = [ "logging", "appender", "rolling" ]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
